# GAHIB

./: .gitignore  README.md  pyproject.toml
.claude/projects/-home-zeyufu-Desktop-HSDE/memory/: project_rename_gahib.md
experiments/: __init__.py  aggregate_new_experiments.py  downstream_analysis.py  exp_utils.py  run_ablation.py  run_all_expanded.sh  run_batch_size_cost.py  run_classical_benchmark.py  run_computational_cost.py  run_disentanglement.py  run_encoder_comparison.py  run_gmvae_benchmark.py  run_graph_conv_sweep.py  run_hyperparam_sensitivity.py  run_interpretation.py  run_latent_dim_ablation.py  run_new_experiments_sequential.py  run_parallel_group_A.sh  run_parallel_group_B.sh  run_pseudotime_trajectory.py  run_sc_deeplearning_benchmark.py  run_seed_robustness.py  run_study.py  visualize_study.py
gahib/: __init__.py  interpretation.py
gahib/core/: __init__.py  agent.py  environment.py  graph_modules.py  graph_utils.py  mixin.py  model.py  module.py  utils.py
gahib/metrics/: __init__.py  dre.py  lse.py
gahib/viz/: __init__.py  controller.py  fig_downstream_analysis.py  fig_go_enrichment.py  fig_new_experiments.py  fig_trajectory.py  interpretation.py  run_all_visualizations.py  style.py
paper/: .gitignore  FIGURE_INDEX.md  Makefile  gahib_paper.tex  references.bib
tests/: conftest.py  test_models.py
