[build-system]
requires = ["setuptools >= 64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "gahib"
version = "2.0.0"
description = "Graph Attention Hyperbolic Information Bottleneck VAE for single-cell omics analysis"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Zeyu Fu"},
]
keywords = ["single-cell", "VAE", "hyperbolic", "graph-neural-network", "scRNA-seq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "torch>=1.12",
    "numpy",
    "scipy",
    "scikit-learn",
    "anndata",
    "tqdm",
    "pandas",
]

[project.optional-dependencies]
graph = ["torch-geometric"]
scanpy = ["scanpy"]
viz = ["matplotlib", "seaborn"]
all = [
    "torch-geometric",
    "scanpy",
    "matplotlib",
    "seaborn",
]
dev = [
    "pytest",
    "scanpy",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
include = ["gahib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
